# RTerm

./: Cargo.toml  README.md
src/: config.rs  main.rs  pty.rs
src/renderer/: glyph.rs  mod.rs  shader.wgsl
src/term/: ansi.rs  grid.rs  mod.rs
