[package]
name = "RTerm"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.29"
wgpu = "0.19"
pollster = "0.3"
portable-pty = "0.8"
anyhow = "1.0"
crossbeam-channel = "0.5"
fontdue = "0.8"
bytemuck = { version = "1.14", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true